resources/test-data/component-based-gitops-repository/components/componentA/base/deployment-sample-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-a
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: component-a
  template:
    metadata:
      labels:
        app.kubernetes.io/name: component-a
    spec:
      containers:
      - name: component-a
        imagePullPolicy: Always

    # The spec for the container INTENTIONALLY does not contain image/env vars/replicas/ports, here.
    # These values should be provided by overlays on a per environment basis.
