resources/test-data/component-based-gitops-repository/components/componentA/base/route-sample-workload.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: component-a
spec:
  subdomain: component-a
  to:
    kind: Service
    name: component-a
    weight: 100

  # Route intentionally does not contain port field, here. This should be defined in overlay.
  
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
